# store-desktop

./: main.py  pyproject.toml
windows/: authorization.py  main.py  registration.py  template.py
